--- a/tomatomusou.vcxproj
+++ b/tomatomusou.vcxproj
@@ -188,12 +188,14 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Projector.cpp" />
+    <ClCompile Include="Rank.cpp" />
     <ClCompile Include="RapidJson.cpp" />
     <ClCompile Include="ResultScene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Score.cpp" />
     <ClCompile Include="ScoreUIController.cpp" />
     <ClCompile Include="StaticHuman.cpp" />
+    <ClCompile Include="StillProjector.cpp" />
     <ClCompile Include="TimeCount.cpp" />
     <ClCompile Include="TimeUIController.cpp" />
     <ClCompile Include="TitleScene.cpp" />
@@ -229,6 +231,7 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="Projector.h" />
+    <ClInclude Include="Rank.h" />
     <ClInclude Include="RapidJson.h" />
     <ClInclude Include="ResultScene.h" />
     <ClInclude Include="Scene.h" />
@@ -236,6 +239,7 @@
     <ClInclude Include="Score.h" />
     <ClInclude Include="ScoreUIController.h" />
     <ClInclude Include="StaticHuman.h" />
+    <ClInclude Include="StillProjector.h" />
     <ClInclude Include="Tag.h" />
     <ClInclude Include="TimeCount.h" />
     <ClInclude Include="TimeUIController.h" />
