--- a/tomatomusou.vcxproj
+++ b/tomatomusou.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="Score.cpp" />
     <ClCompile Include="ScoreUIController.cpp" />
     <ClCompile Include="SkyDome.cpp" />
+    <ClCompile Include="Sound.cpp" />
     <ClCompile Include="StaticHuman.cpp" />
     <ClCompile Include="StillProjector.cpp" />
     <ClCompile Include="TimeCount.cpp" />
@@ -238,6 +239,7 @@
     <ClInclude Include="Score.h" />
     <ClInclude Include="ScoreUIController.h" />
     <ClInclude Include="SkyDome.h" />
+    <ClInclude Include="Sound.h" />
     <ClInclude Include="StaticHuman.h" />
     <ClInclude Include="StillProjector.h" />
     <ClInclude Include="Tag.h" />
