--- a/tomatomusou.vcxproj.filters
+++ b/tomatomusou.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClCompile Include="Tomato.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
-    <ClCompile Include="Effect.cpp">
-      <Filter>Effect</Filter>
-    </ClCompile>
     <ClCompile Include="TomatoWall.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
@@ -120,6 +117,12 @@
       <Filter>Asset</Filter>
     </ClCompile>
     <ClCompile Include="Logo.cpp">
+      <Filter>UI\Title</Filter>
+    </ClCompile>
+    <ClCompile Include="TransitionButton.cpp">
+      <Filter>UI\Title</Filter>
+    </ClCompile>
+    <ClCompile Include="Gradation.cpp">
       <Filter>UI\Title</Filter>
     </ClCompile>
   </ItemGroup>
@@ -218,11 +221,17 @@
     <ClInclude Include="UIBase.h">
       <Filter>UI</Filter>
     </ClInclude>
-    <ClInclude Include="UIRenderer.h">
-      <Filter>UI</Filter>
-    </ClInclude>
     <ClInclude Include="Logo.h">
       <Filter>UI\Title</Filter>
+    </ClInclude>
+    <ClInclude Include="TransitionButton.h">
+      <Filter>UI\Title</Filter>
+    </ClInclude>
+    <ClInclude Include="Gradation.h">
+      <Filter>UI\Title</Filter>
+    </ClInclude>
+    <ClInclude Include="ModelBase.h">
+      <Filter>Model</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -272,6 +281,18 @@
     <Filter Include="UI\Result">
       <UniqueIdentifier>{d4d8419e-ef50-4a02-8ea6-062b18ffef79}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Model">
+      <UniqueIdentifier>{f72e68a2-2317-4b3a-8374-6762d141c38a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Model\Play">
+      <UniqueIdentifier>{56b9dfd8-015c-4a37-a165-584bcd1975ad}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Model\Result">
+      <UniqueIdentifier>{017235e4-c953-4dae-95cf-1c88075d368f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Model\Title">
+      <UniqueIdentifier>{0e549514-8871-4ba0-8ebe-4f0e0d5789b2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -290,5 +311,8 @@
     <ClInclude Include="SkyDome.h" />
     <ClInclude Include="StillProjector.h" />
     <ClInclude Include="Rank.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
