モデルの親クラスの作成

--- a/tomatomusou.vcxproj
+++ b/tomatomusou.vcxproj
@@ -203,7 +203,9 @@
     <ClCompile Include="StillProjector.cpp" />
     <ClCompile Include="TimeCount.cpp" />
     <ClCompile Include="TimeUIController.cpp" />
+    <ClCompile Include="TitleGround.cpp" />
     <ClCompile Include="TitleScene.cpp" />
+    <ClCompile Include="TitleTomatoWall.cpp" />
     <ClCompile Include="Tomato.cpp" />
     <ClCompile Include="TomatoUIContoroller.cpp" />
     <ClCompile Include="TomatoWall.cpp" />
@@ -255,7 +257,9 @@
     <ClInclude Include="Tag.h" />
     <ClInclude Include="TimeCount.h" />
     <ClInclude Include="TimeUIController.h" />
+    <ClInclude Include="TitleGround.h" />
     <ClInclude Include="TitleScene.h" />
+    <ClInclude Include="TitleTomatoWall.h" />
     <ClInclude Include="Tomato.h" />
     <ClInclude Include="TomatoUIContoroller.h" />
     <ClInclude Include="TomatoWall.h" />
