--- a/tomatomusou.vcxproj.filters
+++ b/tomatomusou.vcxproj.filters
@@ -4,10 +4,8 @@
     <ClCompile Include="App.cpp" />
     <ClCompile Include="DebugDraw.cpp" />
     <ClCompile Include="Fps.cpp" />
-    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Human.cpp" />
     <ClCompile Include="Image.cpp" />
-    <ClCompile Include="Ground.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TitleScene.cpp">
@@ -56,9 +54,6 @@
       <Filter>GameObject</Filter>
     </ClCompile>
     <ClCompile Include="TomatoWall.cpp">
-      <Filter>GameObject</Filter>
-    </ClCompile>
-    <ClCompile Include="Ground.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
     <ClCompile Include="HitEffect.cpp">
@@ -135,6 +130,12 @@
     <ClCompile Include="SkyDome.cpp">
       <Filter>Model</Filter>
     </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayGround.cpp">
+      <Filter>Model\Play</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h" />
@@ -198,9 +199,6 @@
     <ClInclude Include="TomatoWall.h">
       <Filter>GameObject</Filter>
     </ClInclude>
-    <ClInclude Include="Ground.h">
-      <Filter>GameObject</Filter>
-    </ClInclude>
     <ClInclude Include="Collider.h">
       <Filter>Collider</Filter>
     </ClInclude>
@@ -248,6 +246,9 @@
     </ClInclude>
     <ClInclude Include="SkyDome.h">
       <Filter>Model</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayGround.h">
+      <Filter>Model\Play</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
