--- a/tomatomusou.vcxproj.filters
+++ b/tomatomusou.vcxproj.filters
@@ -35,9 +35,6 @@
     <ClCompile Include="Collision.cpp">
       <Filter>Component\Collider</Filter>
     </ClCompile>
-    <ClCompile Include="GameClearScene.cpp">
-      <Filter>GameObject\Scene</Filter>
-    </ClCompile>
     <ClCompile Include="GameObject.cpp">
       <Filter>GameObject</Filter>
     </ClCompile>
@@ -46,9 +43,6 @@
     </ClCompile>
     <ClCompile Include="Fps.cpp">
       <Filter>Sistem</Filter>
-    </ClCompile>
-    <ClCompile Include="GameOverScene.cpp">
-      <Filter>GameObject\Scene</Filter>
     </ClCompile>
     <ClCompile Include="Projector.cpp">
       <Filter>GameObject\Camera</Filter>
@@ -170,6 +164,12 @@
     <ClCompile Include="DebugColliderObject.cpp">
       <Filter>Component\Collider</Filter>
     </ClCompile>
+    <ClCompile Include="ResultGround.cpp">
+      <Filter>BackGround</Filter>
+    </ClCompile>
+    <ClCompile Include="ResultTomato.cpp">
+      <Filter>GameObject\Tomato</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App.h">
@@ -208,9 +208,6 @@
     <ClInclude Include="Component.h">
       <Filter>Component</Filter>
     </ClInclude>
-    <ClInclude Include="GameClearScene.h">
-      <Filter>GameObject\Scene</Filter>
-    </ClInclude>
     <ClInclude Include="GameObject.h">
       <Filter>GameObject</Filter>
     </ClInclude>
@@ -222,9 +219,6 @@
     </ClInclude>
     <ClInclude Include="Common.h">
       <Filter>Sistem</Filter>
-    </ClInclude>
-    <ClInclude Include="GameOverScene.h">
-      <Filter>GameObject\Scene</Filter>
     </ClInclude>
     <ClInclude Include="Projector.h">
       <Filter>GameObject\Camera</Filter>
@@ -363,6 +357,15 @@
     </ClInclude>
     <ClInclude Include="DebugColliderObject.h">
       <Filter>Component\Collider</Filter>
+    </ClInclude>
+    <ClInclude Include="ResultGround.h">
+      <Filter>BackGround</Filter>
+    </ClInclude>
+    <ClInclude Include="ResultTomato.h">
+      <Filter>GameObject\Tomato</Filter>
+    </ClInclude>
+    <ClInclude Include="ResultTomatoPool.h">
+      <Filter>GameObject\Tomato</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
